--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Welcome to the official St Gerard's School Podcast. Listen to episodes about school life, special guests, and more." />
   <meta name="keywords" content="St Gerard's, School Podcast, Education, Bangor, Podcasts, Students, School News" />
   <meta name="author" content="Rowan Sutcliffe" />
-
+<meta name="google-site-verification" content="OfuWluQ_16WVvQBKLogc5-X2rnqPNVeTwMeul3UD4-M" />
   <style>
     body {
       font-family: 'Noto Sans', sans-serif;
