--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <title>St Gerard's Podcast</title>
+<meta name="description" content="The official podcast of St Gerard's School in Bangor. Listen to student-led episodes and interviews here.">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>St Gerard's Podcast</title>
