--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   <meta name="description" content="Welcome to the official St Gerard's School Podcast. Listen to episodes about school life, special guests, and more." />
   <meta name="keywords" content="St Gerard's, School Podcast, Education, Bangor, Podcasts, Students, School News" />
   <meta name="author" content="Rowan Sutcliffe" />
+  <meta name="robots" content="index, follow" />
 
   <style>
     body {
       font-family: 'Noto Sans', sans-serif;
-      color:FFFF00 ;
+      color: #FFFF00;
       margin: 0;
       background:
         linear-gradient(rgba(0, 51, 102, 0.6), rgba(0, 51, 102, 0.6)),
@@ -176,39 +177,34 @@
 
     <div id="podcastList">
 
-      <!-- Podcast entries -->
       <div class="podcast">
         <h3>Episode 1: </h3>
         <iframe src="https://www.youtube.com/embed/5MWT_doo68k" allowfullscreen></iframe>
       </div>
+
       <div class="podcast">
         <h3>Episode 2: </h3>
         <iframe src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
       </div>
+
       <div class="podcast">
-        <h3>Episode 3: Hugo interview </h3>
+        <h3>Episode 3: Hugo interview</h3>
         <audio controls src="https://www.dropbox.com/scl/fi/rck6a4xos3r6c3y9yqfbu/hugo.mp3?rlkey=tw9htstmmqv18la2nqe0sf5qv&st=g8gip3ce&dl=1">
           Your browser does not support the audio element.
         </audio>
       </div>
+
       <div class="podcast">
+        <h3>Episode 4: Rowan interview</h3>
+        <audio controls src="https://www.dropbox.com/scl/fi/7l3wf4y4b3ktucgfala5z/rowan.mp3?rlkey=z98dllpbi1frwd1v682y0pyg7&st=oep0ltdt&dl=1">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+
       <div class="podcast">
-      <h3>Episode 4: Rowan interview </h3>
-      <audio controls src="https://www.dropbox.com/scl/fi/7l3wf4y4b3ktucgfala5z/rowan.mp3?rlkey=z98dllpbi1frwd1v682y0pyg7&st=oep0ltdt&dl=1">
-        Your browser does not support the audio element.
-      </audio>
-    </div>
-
-    <div class="podcast">
-      <h3>Episode 5: Oliver interview </h3>
-      <audio controls src="https://www.dropbox.com/scl/fi/4t3b1i75j6zt5vibv3ls7/oliver.mp3?rlkey=nnibph2b6svac6xgq5rkobods&st=ti2ksz6g&dl=1">
-        Your browser does not support the audio element.
-      </audio>
-    </div>
-
-
-
-
+        <h3>Episode 5: Oliver interview</h3>
+        <audio controls src="https://www.dropbox.com/scl/fi/4t3b1i75j6zt5vibv3ls7/oliver.mp3?rlkey=nnibph2b6svac6xgq5rkobods&st=ti2ksz6g&dl=1">
+          Your browser does not support the audio element.
         </audio>
       </div>
 
