--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <style>
     body {
       font-family: 'Noto Sans', sans-serif;
-      color: #003366; /* NAVY BLUE */
+      color: #003366;
       margin: 0;
       background:
         linear-gradient(rgba(0, 51, 102, 0.6), rgba(0, 51, 102, 0.6)),
@@ -31,7 +31,7 @@
 
     header {
       background: #003366;
-      color: #ffcc00; /* Header stays yellow */
+      color: #ffcc00;
       padding: 20px;
       display: flex;
       align-items: center;
@@ -54,7 +54,7 @@
       font-size: 28px;
       margin: 0;
       font-weight: 700;
-      color: #ffcc00; /* Explicitly keep header text yellow */
+      color: #ffcc00;
     }
 
     .container {
@@ -70,11 +70,11 @@
       text-align: center;
       margin-bottom: 15px;
       font-size: 24px;
-      color: #003366; /* Force navy blue */
+      color: #003366;
     }
 
     .podcast h3 {
-      color: #003366; /* NAVY BLUE podcast episode titles */
+      color: #003366;
     }
 
     .searchbar {
@@ -195,21 +195,21 @@
 
       <div class="podcast">
         <h3>Episode 3: Hugo interview </h3>
-        <audio controls src="https://www.dropbox.com/scl/fi/rck6a4xos3r6c3y9yqfbu/hugo.mp3?rlkey=tw9htstmmqv18la2nqe0sf5qv&st=g8gip3ce&dl=1">
+        <audio controls src="https://dl.dropboxusercontent.com/s/rck6a4xos3r6c3y9yqfbu/hugo.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 4: Rowan interview </h3>
-        <audio controls src="https://www.dropbox.com/scl/fi/7l3wf4y4b3ktucgfala5z/rowan.mp3?rlkey=z98dllpbi1frwd1v682y0pyg7&st=kmoqjgh3&dl=1">
+        <audio controls src="https://dl.dropboxusercontent.com/s/7l3wf4y4b3ktucgfala5z/rowan.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 5: Oliver interview </h3>
-        <audio controls src="https://www.dropbox.com/scl/fi/gmawob43qq94ipjw8ydsp/oliver.mp3?rlkey=jm6to9b02fo0a1ll1za4a3hgi&st=cghypocl&dl=1">
+        <audio controls src="https://dl.dropboxusercontent.com/s/gmawob43qq94ipjw8ydsp/oliver.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
