--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
       <div class="podcast">
         <h3>Episode 3: Hugo interview </h3>
-        <audio controls src="https://dl.dropboxusercontent.com/s/rck6a4xos3r6c3y9yqfbu/hugo.mp3">
+        <audio controls src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"">
           Your browser does not support the audio element.
         </audio>
       </div>
