--- a/index.html
+++ b/index.html
@@ -195,21 +195,21 @@
 
       <div class="podcast">
         <h3>Episode 3: Hugo interview </h3>
-        <audio controls src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"">
+        <audio controls src="https://archive.org/download/rowan-1/hugo.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 4: Rowan interview </h3>
-        <audio controls src="https://dl.dropboxusercontent.com/s/7l3wf4y4b3ktucgfala5z/rowan.mp3">
+        <audio controls src="https://archive.org/download/rowan-1/rowan%20%281%29.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 5: Oliver interview </h3>
-        <audio controls src="https://dl.dropboxusercontent.com/s/gmawob43qq94ipjw8ydsp/oliver.mp3">
+        <audio controls src="https://archive.org/download/rowan-1/oliver%20%281%29.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
