--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   </div>
 
   <footer>
-    Developed by Rowan Sutcliffe — <a href="mailto:rowan.sutcliffe@outlook.com">Contact Me for Web Development</a> |
+    Developed by Rowan Sutcliffe
     <a href="https://www.st-gerards.org/" target="_blank" rel="noopener">Visit St Gerard's School Website</a>
   </footer>
 
