--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>St Gerard's Podcast</title>
 
+  <!-- Favicon -->
+  <link rel="icon" href="https://tweescorpion.github.io/ST_GERARDS_WEBSITE/favicon.ico" type="image/x-icon">
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VQGCJLB30"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-3VQGCJLB30');
-</script>
-
-  <!-- Favicon -->
-  <link rel="icon" href="https://www.dropbox.com/scl/fi/9s9claua3v91paeokbyh1/bilis6ww.png?rlkey=5qq0etpja19uenb9f4b09bk78&st=v6w6t7gt&dl=1" type="image/x-icon">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VQGCJLB30"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-3VQGCJLB30');
+  </script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
