--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>St Gerard's Podcast</title>
 
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5750992057837893"
+     crossorigin="anonymous"></script>
+
   <!-- Favicon -->
   <link rel="icon" href="https://tweescorpion.github.io/ST_GERARDS_WEBSITE/favicon.ico" type="image/x-icon">
 
