--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>St Gerard's Podcast</title>
 
-
+  <!-- Google AdSense verification script -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5750992057837893"
      crossorigin="anonymous"></script>
 
@@ -206,6 +206,19 @@
         <iframe src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
       </div>
 
+      <!-- Google AdSense ad unit -->
+      <div style="text-align:center; margin:20px 0;">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-5750992057837893"
+             data-ad-slot="1234567890"  <!-- replace with your ad slot ID -->
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+
       <div class="podcast">
         <h3>Episode 3: Hugo interview </h3>
         <audio controls src="https://archive.org/download/rowan-1/hugo.mp3">
@@ -254,3 +267,4 @@
 </body>
 
 </html>
+
