--- a/index.html
+++ b/index.html
@@ -206,15 +206,16 @@
         <iframe src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
       </div>
 
-      <!-- Google AdSense ad unit -->
-      <div style="text-align:center; margin:20px 0;">
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-5750992057837893"
-             data-ad-slot="1234567890"  <!-- replace with your ad slot ID -->
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
+      <!-- Google AdSense Auto Ad placeholder -->
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-client="ca-pub-5750992057837893"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
           (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
       </div>
