--- a/index.html
+++ b/index.html
@@ -206,20 +206,6 @@
         <iframe src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
       </div>
 
-      <!-- Google AdSense Auto Ad placeholder -->
-<ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-client="ca-pub-5750992057837893"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </div>
-
       <div class="podcast">
         <h3>Episode 3: Hugo interview </h3>
         <audio controls src="https://archive.org/download/rowan-1/hugo.mp3">
@@ -243,10 +229,30 @@
 
     </div>
 
+    <!-- AdSense Auto Ad Block after podcast list -->
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center; border:1px dashed red; background:#f0f0f0; margin:20px 0;"
+         data-ad-client="ca-pub-5750992057837893"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <div class="btn-container" style="text-align:center;">
       <button onclick="alert('More episodes coming soon!')">More Episodes</button>
     </div>
   </div>
+
+  <!-- AdSense Auto Ad Block before footer -->
+  <ins class="adsbygoogle"
+       style="display:block; text-align:center; border:1px dashed red; background:#f0f0f0; margin:20px 0;"
+       data-ad-client="ca-pub-5750992057837893"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 
   <footer>
     <a href="https://www.st-gerards.org/" target="_blank" rel="noopener">Visit St Gerard's School Website</a>
@@ -266,6 +272,4 @@
   </script>
 
 </body>
-
 </html>
-
