--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- SEO basics -->
   <meta name="description" content="Welcome to the official St Gerard's School Podcast. Listen to episodes about school life, special guests, and more." />
-  <meta name="keywords" content="St Gerard's, School Podcast, Education, Bangor, Podcasts, Students, School News" />
+  <meta name="keywords" content="St Gerard's, School Podcast, Education, ST gerards bangor,podcast,Bangor, Podcasts, Students, School News" />
   <meta name="author" content="Rowan Sutcliffe" />
 
   <style>
