--- a/index.html
+++ b/index.html
@@ -210,23 +210,23 @@
         <iframe class="hidden-video" src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
       </div>
 
-      <!-- Visible audio episodes -->
+      <!-- Visible audio episodes with original names -->
       <div class="podcast">
-        <h3>Episode 1: Speech 1</h3>
+        <h3>Episode 3: Hugo interview </h3>
         <audio controls src="https://archive.org/download/rowan-1/hugo.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
-        <h3>Episode 2: Speech 2</h3>
+        <h3>Episode 4: Rowan interview </h3>
         <audio controls src="https://archive.org/download/rowan-1/rowan%20%281%29.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
-        <h3>Episode 3: Speech 3</h3>
+        <h3>Episode 5: Oliver interview </h3>
         <audio controls src="https://archive.org/download/rowan-1/oliver%20%281%29.mp3">
           Your browser does not support the audio element.
         </audio>
