--- a/index.html
+++ b/index.html
@@ -233,8 +233,7 @@
       </div>
 
     </div>
-
-  
+  </div> <!-- ✅ container closed properly -->
 
   <footer>
     <a href="https://www.st-gerards.org/" target="_blank" rel="noopener">Visit St Gerard's School Website</a>
