--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5750992057837893"
      crossorigin="anonymous"></script>
 
-  <!-- Favicon -->
-  <link rel="icon" href="https://tweescorpion.github.io/ST_GERARDS_WEBSITE/favicon.ico" type="image/x-icon">
+  <!-- Favicon (still optional, kept as old .ico if you want to add it back later) -->
+  <link rel="icon" href="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/1702301021046.jpg" type="image/jpeg">
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VQGCJLB30"></script>
@@ -188,7 +188,7 @@
 <body>
 
   <header>
-    <img src="https://www.dropbox.com/scl/fi/o00kckls1829t511apmsv/school_logo-removebg-preview.png?rlkey=b4pp497rdevit1ph4hcgxobmq&st=7vki182k&dl=1" alt="St Gerard's School Logo" />
+    <img src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/1702301021046.jpg" alt="St Gerard's School Logo" />
     <h1>St Gerard's School Podcast</h1>
   </header>
 
@@ -212,28 +212,28 @@
 
       <!-- Visible audio episodes with original names -->
       <div class="podcast">
-        <h3>Episode 1: Hugo interview </h3>
+        <h3>Episode 1: Hugo interview</h3>
         <audio controls src="https://archive.org/download/rowan-1/hugo.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
-        <h3>Episode 2: Rowan interview </h3>
+        <h3>Episode 2: Rowan interview</h3>
         <audio controls src="https://archive.org/download/rowan-1/rowan%20%281%29.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
-        <h3>Episode 3: Oliver interview </h3>
+        <h3>Episode 3: Oliver interview</h3>
         <audio controls src="https://archive.org/download/rowan-1/oliver%20%281%29.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
     </div>
-  </div> <!-- ✅ container closed properly -->
+  </div>
 
   <footer>
     <a href="https://www.st-gerards.org/" target="_blank" rel="noopener">Visit St Gerard's School Website</a>
@@ -253,5 +253,4 @@
   </script>
 
 </body>
-
 </html>
