adding schoolwork to seo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- SEO improvements -->
   <meta name="description" content="Listen to St Gerard's School Podcast featuring student speeches, interviews, and school news. Discover new episodes weekly and support the school radio club." />
-  <meta name="keywords" content="St Gerard's School Podcast, student speeches, school interviews, Bangor podcast, school radio club, education podcast, school news" />
+  <meta name="keywords" content="St Gerard's School Podcast, student speeches, school interviews, Bangor podcast,school work, school radio club, education podcast, school news" />
   <meta name="author" content="Rowan Sutcliffe" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://tweescorpion.github.io/ST_GERARDS_WEBSITE/" />
