--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       
       <div class="podcast">
         <h3>Episode 4: Josh Interveiw/h3>
-        <audio controls src="https://stgerardsschool-my.sharepoint.com/:u:/g/personal/rsutcliffe_st-gerards_org/Ecf11VcU7atPsttipFBudOMBHlmMfkBuSfea2EGZUW8ZuA?e=PUwpmm">
+        <audio controls src="https://stgerardsschool-my.sharepoint.com/personal/rsutcliffe_st-gerards_org/_layouts/15/embed.aspx?UniqueId=57d5f5c7-ed14-4fab-b2db-62a4506e74e3&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create">
           Your browser does not support the audio element.
         </audio>
       </div>
