--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5750992057837893"
      crossorigin="anonymous"></script>
 
-  <!-- Favicon (still optional, kept as old .ico if you want to add it back later) -->
+  <!-- Favicon -->
   <link rel="icon" href="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/1702301021046.jpg" type="image/jpeg">
 
   <!-- Google Analytics -->
@@ -29,7 +29,7 @@
 
   <!-- SEO improvements -->
   <meta name="description" content="Listen to St Gerard's School Podcast featuring student speeches, interviews, and school news. Discover new episodes weekly and support the school radio club." />
-  <meta name="keywords" content="St Gerard's School Podcast, student speeches, school interviews, Bangor podcast,school work, school radio club, education podcast, school news" />
+  <meta name="keywords" content="St Gerard's School Podcast, student speeches, school interviews, Bangor podcast, school work, school radio club, education podcast, school news" />
   <meta name="author" content="Rowan Sutcliffe" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://tweescorpion.github.io/ST_GERARDS_WEBSITE/" />
@@ -232,12 +232,15 @@
         </audio>
       </div>
 
-      
       <div class="podcast">
-        <h3>Episode 4: Josh Interveiw/h3>
-        <audio controls src="https://stgerardsschool-my.sharepoint.com/personal/rsutcliffe_st-gerards_org/_layouts/15/embed.aspx?UniqueId=57d5f5c7-ed14-4fab-b2db-62a4506e74e3&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create">
-          Your browser does not support the audio element.
-        </audio>
+        <h3>Episode 4: Josh Ledden</h3>
+        <iframe src="https://archive.org/embed/josh-ledden"
+                width="100%" height="120"
+                frameborder="0"
+                webkitallowfullscreen="true"
+                mozallowfullscreen="true"
+                allowfullscreen>
+        </iframe>
       </div>
 
     </div>
