--- a/index.html
+++ b/index.html
@@ -234,13 +234,9 @@
 
       <div class="podcast">
         <h3>Episode 4: Josh Ledden</h3>
-        <iframe src="https://archive.org/embed/josh-ledden"
-                width="100%" height="120"
-                frameborder="0"
-                webkitallowfullscreen="true"
-                mozallowfullscreen="true"
-                allowfullscreen>
-        </iframe>
+        <audio controls src="https://archive.org/download/josh-ledden/josh%20ledden.mp3">
+          Your browser does not support the audio element.
+        </audio>
       </div>
 
     </div>
