--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 
        <div class="podcast">
-        <h3>Episode 5: school charity planning</h3>
+        <h3>Episode 5: School Charity Planning</h3>
         <audio controls src="https://archive.org/download/school-ms-dickinson-interveiw/school%20ms%20dickinson%20interveiw.mp3">
           Your browser does not support the audio element.
         </audio>
