--- a/index.html
+++ b/index.html
@@ -247,6 +247,18 @@
         </audio>
       </div>
 
+
+      <div class="podcast">
+        <h3>Episode 6: about St Gerards</h3>
+        <audio controls src="https://archive.org/download/school-ethoses/school%20ethoses.mp3">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+
+
+
+      
+
     </div>
   </div>
 
