--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 
       <div class="podcast">
-        <h3>Episode 6: about St Gerards</h3>
+        <h3>Episode 6: About St Gerards</h3>
         <audio controls src="https://archive.org/download/school-ethoses/school%20ethoses.mp3">
           Your browser does not support the audio element.
         </audio>
