school ethos added to the top for making more sense

--- a/index.html
+++ b/index.html
@@ -211,6 +211,13 @@
       </div>
 
       <!-- Visible audio episodes with original names -->
+     <div class="podcast">
+        <h3>Intro: About St Gerards- Our Ethos</h3>
+        <audio controls src="https://archive.org/download/school-ethoses/school%20ethoses.mp3">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      
       <div class="podcast">
         <h3>Episode 1: Hugo interview</h3>
         <audio controls src="https://archive.org/download/rowan-1/hugo.mp3">
@@ -248,18 +255,8 @@
       </div>
 
 
-      <div class="podcast">
-        <h3>Episode 6: About St Gerards</h3>
-        <audio controls src="https://archive.org/download/school-ethoses/school%20ethoses.mp3">
-          Your browser does not support the audio element.
-        </audio>
+
       </div>
-
-
-
-      
-
-    </div>
   </div>
 
   <footer>
