--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
       <div class="podcast">
         <h3>Episode 4: Josh Ledden</h3>
-        <audio controls src="https://archive.org/download/josh-ledden/josh%20ledden.mp3">
+        <audio controls preload="none" src="https://archive.org/download/josh-ledden/josh%20ledden.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
