--- a/index.html
+++ b/index.html
@@ -211,41 +211,40 @@
 
       <div class="podcast">
         <h3>Intro: About St Gerards- Our Ethos</h3>
-        <audio controls preload="none" src="https://archive.org/download/school-ethoses/school%20ethoses.mp3">
+        <audio controls preload="metadata" src="https://archive.org/download/school-ethoses/school%20ethoses.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 1: Hugo interview</h3>
-        <audio controls preload="none" src="https://archive.org/download/rowan-1/hugo.mp3">
+        <audio controls preload="metadata" src="https://archive.org/download/rowan-1/hugo.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 2: Rowan interview</h3>
-        <audio controls preload="none" src="https://archive.org/download/rowan-1/rowan%20%281%29.mp3">
+        <audio controls preload="metadata" src="https://archive.org/download/rowan-1/rowan%20%281%29.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 3: Oliver interview</h3>
-        <audio controls preload="none" src="https://archive.org/download/rowan-1/oliver%20%281%29.mp3">
+        <audio controls preload="metadata" src="https://archive.org/download/rowan-1/oliver%20%281%29.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 4: Josh Ledden</h3>
-        <audio controls preload="none" src="https://archive.org/download/josh-ledden/josh%20ledden.mp3">
+        <audio controls preload="metadata" src="https://archive.org/download/josh-ledden/josh%20ledden.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
 
       <div class="podcast">
         <h3>Episode 5: School Charity Planning</h3>
-        <audio controls preload="none" src="https://archive.org/download/school-ms-dickinson-interveiw/school%20ms%20dickinson%20interveiw.mp3">
-          Your browser does not support the audio element.
-        </audio>
+        <audio controls preload="metadata" src="https://archive.org/download/school-ms-dickinson-interveiw/school%20ms%20dickinson%20interveiw.mp3">
+          Your browser
