--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <body>
 
   <header>
-    <img src="https://github.com/tweescorpion/tweescorpion.github.io/blob/041335dccc9cf8c93e0097030260ef6b46d4af4e/1702301021046-removebg-preview.png" alt="St Gerard's School Logo" />
+    <img src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/1702301021046.jpg" alt="St Gerard's School Logo" />
     <h1>St Gerard's School Podcast</h1>
   </header>
 
