--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      crossorigin="anonymous"></script>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/1702301021046.jpg" type="image/jpeg">
+  <link rel="icon" href="https://github.com/tweescorpion/tweescorpion.github.io/blob/00ac28c8603cc1e76b1182f37ba6d51f0d2b2617/1702301021046-removebg-preview.png" type="image/jpeg">
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VQGCJLB30"></script>
