--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
       <div class="podcast">
         <h3>Episode 4: Josh Ledden</h3>
-        <audio controls preload="metadata" src="https://archive.org/download/josh-ledden/josh%20ledden.mp3">
+        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/josh%20ledden.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
