speedy hugo added

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
       <div class="podcast">
         <h3>Episode 1: Hugo interview</h3>
-        <audio controls preload="metadata" src="https://archive.org/download/rowan-1/hugo.mp3">
+        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/hugo.mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
