--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
       <div class="podcast">
         <h3>Episode 3: Oliver interview</h3>
-        <audio controls preload="metadata" src="https://archive.org/download/rowan-1/oliver%20%281%29.mp3">
+        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/oliver%20(1).mp3">
           Your browser does not support the audio element.
         </audio>
       </div>
