--- a/index.html
+++ b/index.html
@@ -199,57 +199,60 @@
       <input type="text" id="searchInput" placeholder="Search episodes...">
     </div>
 
-    <div id="podcastList">
+<div id="podcastList">
 
-      <div class="podcast hidden-video-podcast">
-        <iframe class="hidden-video" src="https://www.youtube.com/embed/5MWT_doo68k" allowfullscreen></iframe>
-      </div>
+  <div class="podcast hidden-video-podcast">
+    <iframe class="hidden-video" src="https://www.youtube.com/embed/5MWT_doo68k" allowfullscreen></iframe>
+  </div>
 
-      <div class="podcast hidden-video-podcast">
-        <iframe class="hidden-video" src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
-      </div>
+  <div class="podcast hidden-video-podcast">
+    <iframe class="hidden-video" src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
+  </div>
 
-      <div class="podcast">
-        <h3>Intro: About St Gerards- Our Ethos</h3>
-        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/audio/school%20ethoses.mp3">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
+  <div class="podcast">
+    <h3>Intro: About St Gerards – Our Ethos</h3>
+    <audio controls preload="metadata" src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/audio/school-ethoses.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
 
-      <div class="podcast">
-        <h3>Episode 1: Hugo interview</h3>
-        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/audio/hugo.mp3">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
+  <div class="podcast">
+    <h3>Episode 1: Hugo interview</h3>
+    <audio controls preload="metadata" src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/audio/hugo.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
 
-      <div class="podcast">
-        <h3>Episode 2: Rowan interview</h3>
-        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/audio/rowan%20(1).mp3">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
+  <div class="podcast">
+    <h3>Episode 2: Rowan interview</h3>
+    <audio controls preload="metadata" src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/audio/rowan.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
 
-      <div class="podcast">
-        <h3>Episode 3: Oliver interview</h3>
-        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/audio/oliver%20(1).mp3">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
+  <div class="podcast">
+    <h3>Episode 3: Oliver interview</h3>
+    <audio controls preload="metadata" src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/audio/oliver.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
 
-      <div class="podcast">
-        <h3>Episode 4: Josh Ledden</h3>
-        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/audio/josh%20ledden.mp3">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
+  <div class="podcast">
+    <h3>Episode 4: Josh Ledden</h3>
+    <audio controls preload="metadata" src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/audio/josh-ledden.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
 
-            <div class="podcast">
-        <h3>Episode 5: School Charity Planning</h3>
-        <audio controls preload="metadata" src="https://github.com/tweescorpion/tweescorpion.github.io/raw/refs/heads/main/audio/school%20ms%20dickinson%20interveiw.mp3">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
+  <div class="podcast">
+    <h3>Episode 5: School Charity Planning</h3>
+    <audio controls preload="metadata" src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/audio/school-charity.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
+
+</div>
+
 
     </div> <!-- closes #podcastList -->
   </div> <!-- closes .container -->
