--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
   <div class="podcast">
     <h3>Episode 5: School Charity Planning</h3>
-    <audio controls preload="metadata" src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/audio/school-charity.mp3">
+    <audio controls preload="metadata" src="https://raw.githubusercontent.com/tweescorpion/tweescorpion.github.io/main/audio/school charity.mp3">
       Your browser does not support the audio element.
     </audio>
   </div>
