--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
 <div id="podcastList">
 
   <div class="podcast hidden-video-podcast">
-    <iframe class="hidden-video" src="https://www.youtube.com/embed/5MWT_doo68k" allowfullscreen></iframe>
+    <iframe class="hidden-video" loading="lazy" src="https://www.youtube.com/embed/5MWT_doo68k" allowfullscreen></iframe>
   </div>
 
   <div class="podcast hidden-video-podcast">
-    <iframe class="hidden-video" src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
+    <iframe class="hidden-video" loading="lazy" src="https://www.youtube.com/embed/L_Guz73e6fw" allowfullscreen></iframe>
   </div>
 
   <div class="podcast">
