--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <title>St Gerard's School Podcast</title>
 
 
-  <!-- Clarity tracking code for https://stgerardspodcast.co.uk/ -->
-<script>
+<script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "tjx51ttjyh");
+    })(window, document, "clarity", "script", "tjx6dfj39b");
 </script>
 
   <!-- Google AdSense verification script -->
